aggiunta frase introduttiva (*)

--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
       <!--<p>Inserire una tabella in cui sono elencate (ad alto livello) TUTTE le funzionalità del vostro social network, anche quelle che
         non compariranno nel prototipo.</p> -->
 
+
       <p> Targert principale: <b> GENITORI </b> </p>
 
       <div style="overflow-x:auto"> <!--TABELLE COSTANTI, AGGIUNTA DI CURSORE PER SCORRERE-->
@@ -268,6 +269,7 @@
       <h3 id="funzionalita-da-implementare-dettagliate">Funzionalità dettagliate da implementare</h3>
 
         <!--tabella-->
+      <p> <b> Abbiamo indicato con l'asterisco (*) le funzionalità che sono uguali sia per gli insegnanti sia per i genitori </b> </p>
 
       <div style="overflow-x:auto">
 
