--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="subsection">
       <h2 id="presentazione-concept">Presentazione del concept</h2>
 
-      <h3 id="concept">Vision</h3>
+      <h3 id="concept"> <br> Vision</h3>
 
       <p>
         Puzzle è il primo Social Network didattico il cui focus non è sui bambini ma sui loro genitori e sul rapporto di questi con gli insegnanti.  <br>
@@ -149,7 +149,7 @@
               <b>Francesca</b><br>
               Lavora in uno studio associato di architetti<br>
               Ha una bambina di 7 anni ma poco tempo libero da dedicarle in settimana<br>
-              E’ appassionata d’arte: le piace visitare gallerie, mostre, musei, … insieme alla figlia e al compagno nel fine settimana<br>
+              E’ appassionata d’arte: le piace visitare gallerie, mostre, musei, … insieme alla figlia e al marito nel fine settimana<br>
               Ha un ottimo rapporto con tutte le tecnologie<br>
           </td>
         </tr>
@@ -192,9 +192,27 @@
 
       <h3 id="scenarios">Scenarios</h3>
 
-      <p>Creare uno scenario di utilizzo del social network per ciascuna delle due personas delineate.
-        &Egrave; possibile descrivere lo scenario in formato narrativo (max 1000 car) oppure attraverso
-        sketch o vignette.</p>
+      <p>
+        E' venerdì mattina e <b>Francesca</b> scopre solo adesso che nel pomeriggio dovrà recarsi ad un meeting presso la sede di un importante cliente.
+        Per questo motivo, sa che non farà in tempo ad andare alla riunione genitori-insegnanti prevista per le ore 16 a scuola di sua figlia Alice.
+        Tra l'altro, neanche Mauro, suo marito, non potrà andarci perchè si trova fuori città per lavoro.<br>
+        Durante la pausa pranzo, Francesca va su <i>Puzzle</i> e contatta le insegnanti di inglese e matematica di Alice per sapere come la bambina
+        ha svolto le ultime verifiche fatte in classe. Va poi nella lista dei genitori dei compagnetti di Alice e chiede loro se qualcuno può farle
+        il favore di prendere Alice a scuola perchè probabilmente lei non farà in tempo.<br> Francesca finisce di mangiare l'insalata e riceve già la
+        risposta da parte di un'altra mamma disposta a darle una mano! Le maestre invece non hanno ancora risposto... sa già che passerà del tempo prima
+        che le faranno sapere qualcosa; ma non importa! Per il momento sa che pomeriggio Alice non resterà a scuola ad aspettare da sola: Francesca può
+        andare al meeting tranquilla!<br><br>
+
+        <b>Sara</b>
+        <br><br>
+
+        <b>Antonia</b>
+        <br><br>
+
+        <b>Aurora</b>
+        <br><br>
+
+      </p>
 
 
 
@@ -202,13 +220,13 @@
     <div class="subsection">
       <h2 id="funzionalita-e-architettura">Funzionalità e architettura</h2>
 
-      <h3 id="funzionalita-complete-del-social-network">Funzionalità complete del social network</h3>
+      <h3 id="funzionalita-complete-del-social-network"> <br> Funzionalità complete del social network</h3>
 
       <!--<p>Inserire una tabella in cui sono elencate (ad alto livello) TUTTE le funzionalità del vostro social network, anche quelle che
         non compariranno nel prototipo.</p> -->
 
 
-      <p> Targert principale: <b> GENITORI </b> </p>
+      <p> <br>Targert principale: <b> GENITORI </b> </p>
 
       <div style="overflow-x:auto"> <!--TABELLE COSTANTI, AGGIUNTA DI CURSORE PER SCORRERE-->
         <table>
@@ -266,10 +284,10 @@
         </table>
       </div>
 
-      <h3 id="funzionalita-da-implementare-dettagliate">Funzionalità dettagliate da implementare</h3>
+      <h3 id="funzionalita-da-implementare-dettagliate"> <br> Funzionalità dettagliate da implementare</h3>
 
         <!--tabella-->
-      <p> <b> Abbiamo indicato con l'asterisco (*) le funzionalità che sono uguali sia per gli insegnanti sia per i genitori </b> </p>
+      <p> Con "<b>(*)</b>" sono indicate le funzionalità uguali sia per genitori che per insegnanti </p>
 
       <div style="overflow-x:auto">
 
@@ -572,19 +590,19 @@
           <tr>
             <td> </td>
             <td> Materiale didattico - carica immagine </td>
-            <td> ....  </td>
+            <td> L'insegnante potrà condividere immagini o foto </td>
             <td> .... </td>
           </tr>
           <tr>
             <td> </td>
             <td> Materiale didattico - carica documento </td>
-            <td> .... </td>
+            <td> L'insegnante potrà condividere documenti utili ai fini didattici (svolgimento di determinati esercizi, ...) </td>
             <td> .... </td>
           </tr>
           <tr>
             <td>  </td>
             <td> Materiale didattico - carica video </td>
-            <td> .... </td>
+            <td> L'insegnante potrà condividere video (per far capire il metodo di spiegazione utilizzato in aula, per approfondire determinati argomenti trattati a lezione, ...) </td>
             <td> .... </td>
           </tr>
 
@@ -593,7 +611,7 @@
       </div>
 
 
-      <h3 id="architettura-dellinformazione">Architettura dell'informazione</h3>
+      <h3 id="architettura-dellinformazione"> <br> Architettura dell'informazione</h3>
 
       <!--IMMAGINE FLOWCHART -->
       <a href="images/Puzzle-FlowChart.png">
