--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <td>
               <b>Sara</b><br>
               “Mamma” di professione<br>
-              Dedica tutto il suo tempo ai suoi due bambini<br>
+              Dedica tutto il suo tempo ai suoi tre bambini<br>
               Si ritaglia del tempo per sé solo per fare jogging o andare in bicicletta<br>
               Utilizza il computer per cercare nuove ricette da provare o per aiutare i figli con le ricerche<br>
           </td>
@@ -195,16 +195,24 @@
       <p>
         E' venerdì mattina e <b>Francesca</b> scopre solo adesso che nel pomeriggio dovrà recarsi ad un meeting presso la sede di un importante cliente.
         Per questo motivo, sa che non farà in tempo ad andare alla riunione genitori-insegnanti prevista per le ore 16 a scuola di sua figlia Alice.
-        Tra l'altro, neanche Mauro, suo marito, non potrà andarci perchè si trova fuori città per lavoro.<br>
+        Tra l'altro neanche Mauro, suo marito, potrà andarci perchè si trova fuori città per lavoro.<br>
         Durante la pausa pranzo, Francesca va su <i>Puzzle</i> e contatta le insegnanti di inglese e matematica di Alice per sapere come la bambina
         ha svolto le ultime verifiche fatte in classe. Va poi nella lista dei genitori dei compagnetti di Alice e chiede loro se qualcuno può farle
         il favore di prendere Alice a scuola perchè probabilmente lei non farà in tempo.<br> Francesca finisce di mangiare l'insalata e riceve già la
         risposta da parte di un'altra mamma disposta a darle una mano! Le maestre invece non hanno ancora risposto... sa già che passerà del tempo prima
         che le faranno sapere qualcosa; ma non importa! Per il momento sa che pomeriggio Alice non resterà a scuola ad aspettare da sola: Francesca può
-        andare al meeting tranquilla!<br><br>
+        andare al meeting tranquilla! <br><br>
 
-        <b>Sara</b>
-        <br><br>
+        <b>Sara</b> è una donna "iperattiva". Adora la sua famiglia e prendersi cura di essa. Ogni pomeriggio aiuta i due figli più grandi (Chiara e Andrea)
+        a fare i compiti (Tommaso, il più piccolo, è ancora all'ultimo anno di scuola materna).<br> Da due giorni Chiara è a casa con la febbre, ma Sara ha
+        tutto sotto controllo e si sta mantenendo aggiornata su quello che viene fatto a scuola in sua assenza attraverso il nuovo social network <i>Puzzle</i>.
+        Attraverso la sezione "Diario di classe", infatti, sa giornalmente quali sono i contenuti spiegati a lezione, e nella sezione "Spazio genitori" trova
+        tanto materiale utile per far svolgere i compiti ai suoi figli. Oggi Chiara sta un po' meglio, probabilmente domani tornerà a scuola!<br>
+        Lunedì ci sarà la verifica in classe di inglese... Sara sta già pensando di organizzare un gruppo di studio per questo fine settimana perchè sa che il
+        modo migliore per imparare una lingua è attraverso il dialogo e la condivisione con gli altri! Crea allora in <i>Puzzle</i> un evento "casa", a cui
+        potranno partecipare tutti i compagnetti di Chiara che vorranno. Sa che riuscirà a gestirli perchè una sua amica (laureata in lingue, peraltro) le ha
+        promesso che le avrebbe dato una mano. Preparerà una ciambella probabilmente. E i bambini impareranno divertendosi e socializzando tra loro! Ovviamente anche
+        Andrea e Tommaso si intrufoleranno tra i "grandi"... ma alla fine non è mai troppo presto per imparare l'inglese! <br><br>
 
         <b>Antonia</b>
         <br><br>
