--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         Tra l'altro neanche Mauro, suo marito, potrà andarci perchè si trova fuori città per lavoro.<br>
         Durante la pausa pranzo, Francesca va su <i>Puzzle</i> e contatta le insegnanti di inglese e matematica di Alice per sapere come la bambina
         ha svolto le ultime verifiche fatte in classe. Va poi nella lista dei genitori dei compagnetti di Alice e chiede loro se qualcuno può farle
-        il favore di prendere Alice a scuola perchè probabilmente lei non farà in tempo.<br> Francesca finisce di mangiare l'insalata e riceve già la
+        il favore di prendere Alice a scuola perchè probabilmente lei non farà in tempo. Francesca finisce di mangiare l'insalata e riceve già la
         risposta da parte di un'altra mamma disposta a darle una mano! Le maestre invece non hanno ancora risposto... sa già che passerà del tempo prima
         che le faranno sapere qualcosa; ma non importa! Per il momento sa che pomeriggio Alice non resterà a scuola ad aspettare da sola: Francesca può
         andare al meeting tranquilla! <br><br>
@@ -207,15 +207,22 @@
         a fare i compiti (Tommaso, il più piccolo, è ancora all'ultimo anno di scuola materna).<br> Da due giorni Chiara è a casa con la febbre, ma Sara ha
         tutto sotto controllo e si sta mantenendo aggiornata su quello che viene fatto a scuola in sua assenza attraverso il nuovo social network <i>Puzzle</i>.
         Attraverso la sezione "Diario di classe", infatti, sa giornalmente quali sono i contenuti spiegati a lezione, e nella sezione "Spazio genitori" trova
-        tanto materiale utile per far svolgere i compiti ai suoi figli. Oggi Chiara sta un po' meglio, probabilmente domani tornerà a scuola!<br>
+        tanto materiale utile per far svolgere i compiti ai suoi figli. Oggi Chiara sta un po' meglio, probabilmente domani tornerà a scuola!
         Lunedì ci sarà la verifica in classe di inglese... Sara sta già pensando di organizzare un gruppo di studio per questo fine settimana perchè sa che il
         modo migliore per imparare una lingua è attraverso il dialogo e la condivisione con gli altri! Crea allora in <i>Puzzle</i> un evento "casa", a cui
         potranno partecipare tutti i compagnetti di Chiara che vorranno. Sa che riuscirà a gestirli perchè una sua amica (laureata in lingue, peraltro) le ha
-        promesso che le avrebbe dato una mano. Preparerà una ciambella probabilmente. E i bambini impareranno divertendosi e socializzando tra loro! Ovviamente anche
-        Andrea e Tommaso si intrufoleranno tra i "grandi"... ma alla fine non è mai troppo presto per imparare l'inglese! <br><br>
+        promesso che le avrebbe dato una mano. Preparerà una ciambella probabilmente. E i bambini impareranno divertendosi e socializzando tra loro! Ovviamente
+        anche Andrea e Tommaso si intrufoleranno tra i "grandi"... ma alla fine non è mai troppo presto per imparare l'inglese! <br><br>
 
-        <b>Antonia</b>
-        <br><br>
+        Dopo tanti anni di insegnamento alle spalle, <b>Antonia</b> ha imparato che la collaborazione tra genitori e insegnante è fondamentale durante il
+        percorso scolastico dei bambini. Per questo motivo ha consigliato ai genitori dei suoi alunni di iscriversi a <i>Puzzle</i>, perchè attraverso questa
+        nuova piattaforma li rende partecipi di ciò che viene fatto in aula giornalmente. Lo trova un modo più diretto e stimolante e, qualora senta la necessità
+        di parlare con un genitore, lo contatta direttamente senza dover passare dalla segreteria scolastica. Nonostante non sia più giovanissima, ad Antonia piace
+        tenersi aggiornata circa le nuove tecnologie... aveva già iniziato ad utilizzare il Registro Elettronico un annetto fa, ma lo sentiva poco "vicino" ai
+        genitori. Per non parlare poi del sito istituzionale della scuola: abbastanza datato e poco pratico! Su Puzzle invece, oltre  raccontare (anche in
+        modo informale) la giornata scolastica, si diverte talvolta a pubblicare le foto fatte con gli alunni durante le gite scolastiche! Non esistono più le
+        comunicazioni fredde e distaccate attraverso un avviso lasciato sul diario scolastico! Considera i suoi alunni anche un po' figli suoi... e su
+        <i>Puzzle</i> si sente come appartenente ad una grande famiglia! <br><br>
 
         <b>Aurora</b>
         <br><br>
