--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
           </td>
           <td>
               <b>Francesca</b><br>
-              Lavora in uno studio associato di architetti<br>
-              Ha una bambina di 7 anni ma poco tempo libero da dedicarle in settimana<br>
-              E’ appassionata d’arte: le piace visitare gallerie, mostre, musei, … insieme alla figlia e al marito nel fine settimana<br>
-              Ha un ottimo rapporto con tutte le tecnologie<br>
+              - Lavora in uno studio associato di architetti<br>
+              - Ha una bambina di 7 anni ma poco tempo libero da dedicarle in settimana<br>
+              - E’ appassionata d’arte: le piace visitare gallerie, mostre, musei, … insieme alla figlia e al marito nel fine settimana<br>
+              - Ha un ottimo rapporto con tutte le tecnologie<br>
           </td>
         </tr>
         <tr>
@@ -159,10 +159,10 @@
           </td>
           <td>
               <b>Sara</b><br>
-              “Mamma” di professione<br>
-              Dedica tutto il suo tempo ai suoi tre bambini<br>
-              Si ritaglia del tempo per sé solo per fare jogging o andare in bicicletta<br>
-              Utilizza il computer per cercare nuove ricette da provare o per aiutare i figli con le ricerche<br>
+              - “Mamma” di professione<br>
+              - Dedica tutto il suo tempo ai suoi tre bambini<br>
+              - Si ritaglia del tempo per sé solo per fare jogging o andare in bicicletta<br>
+              - Utilizza il computer per cercare nuove ricette da provare o per aiutare i figli con le ricerche<br>
           </td>
         </tr>
         <tr>
@@ -171,10 +171,10 @@
           </td>
           <td>
               <b>Antonia</b><br>
-              Insegna ai bambini di scuola elementare da 23 anni<br>
-              Ha due figli ormai grandi: uno è un avvocato, l’altro studia ancora all’università<br>
-              Ama leggere<br>
-              Si destreggia bene con le nuove tecnologie<br>
+              - Insegna ai bambini di scuola elementare da 23 anni<br>
+              - Ha due figli ormai grandi: uno è un avvocato, l’altro studia ancora all’università<br>
+              - Ama leggere<br>
+              - Si destreggia bene con le nuove tecnologie<br>
           </td>
         </tr>
         <tr>
@@ -183,9 +183,9 @@
           </td>
           <td>
               <b>Aurora</b><br>
-              Ha 31 anni e insegna le materie linguistiche alla scuola primaria<br>
-              Nel tempo libero adora viaggiare con gli amici<br>
-              Ama stare a contatto con i bambini<br>
+              - Ha 31 anni e insegna matematica e scienze alla scuola primaria<br>
+              - Nel tempo libero adora viaggiare con gli amici<br>
+              - Ama stare a contatto con i bambini<br>
           </td>
         </tr>
       </table>
@@ -214,19 +214,26 @@
         promesso che le avrebbe dato una mano. Preparerà una ciambella probabilmente. E i bambini impareranno divertendosi e socializzando tra loro! Ovviamente
         anche Andrea e Tommaso si intrufoleranno tra i "grandi"... ma alla fine non è mai troppo presto per imparare l'inglese! <br><br>
 
-        Dopo tanti anni di insegnamento alle spalle, <b>Antonia</b> ha imparato che la collaborazione tra genitori e insegnante è fondamentale durante il
+        Dopo tanti anni di insegnamento alle spalle, <b>Antonia</b> ha imparato che la collaborazione tra genitori e insegnanti è fondamentale durante il
         percorso scolastico dei bambini. Per questo motivo ha consigliato ai genitori dei suoi alunni di iscriversi a <i>Puzzle</i>, perchè attraverso questa
         nuova piattaforma li rende partecipi di ciò che viene fatto in aula giornalmente. Lo trova un modo più diretto e stimolante e, qualora senta la necessità
         di parlare con un genitore, lo contatta direttamente senza dover passare dalla segreteria scolastica. Nonostante non sia più giovanissima, ad Antonia piace
         tenersi aggiornata circa le nuove tecnologie... aveva già iniziato ad utilizzare il Registro Elettronico un annetto fa, ma lo sentiva poco "vicino" ai
-        genitori. Per non parlare poi del sito istituzionale della scuola: abbastanza datato e poco pratico! Su Puzzle invece, oltre  raccontare (anche in
+        genitori. Per non parlare poi del sito istituzionale della scuola: abbastanza datato e poco pratico! Su <i>Puzzle</i> invece, oltre  raccontare (anche in
         modo informale) la giornata scolastica, si diverte talvolta a pubblicare le foto fatte con gli alunni durante le gite scolastiche! Non esistono più le
         comunicazioni fredde e distaccate attraverso un avviso lasciato sul diario scolastico! Considera i suoi alunni anche un po' figli suoi... e su
         <i>Puzzle</i> si sente come appartenente ad una grande famiglia! <br><br>
 
-        <b>Aurora</b>
-        <br><br>
-
+        <b>Aurora</b> insegna alle elementari da pochissimo tempo. Essendo molto giovane, le piace l'idea di una didattica innovativa, che possa essere più vicina
+        all'organizzazione scolastica che i bambini incontreranno in futuro durante il loro percorso. Pensa che i libri non siano l'unico mezzo utile
+        all'apprendimento e che i bambini imparino meglio quando sono più stimolati. Quando spiega un nuovo argmento di scienze, Aurora va alla ricerca su Internet
+        di qualche video carino che tratti l'argomento, e lo carica tra il suo materiale didattico in <i>Puzzle</i>, in modo che i genitori possano accedervi e
+        farlo vedere liberamente ai propri figli. Ogni tanto crea anche qualche evento "scuola", organizzando dei piccoli "esperimenti" in classe anche con la
+        partecipazione dei genitori che lo desiderano.
+        Ieri sera Aurora, dopo essere stata contattata da più genitori in difficoltà nello far svolgere degli esercizi per casa ai propri figli, ha preso il suo
+        smartphone e ha registrato un video in cui spiegava i passaggi più significativi dell'ostico esercizio su un foglio di carta, e lo ha caricato tra il suo
+        materiale sul sito. Dopo solo un'ora, ha ricevuto un messaggio di ringraziamento da parte di una mamma a nome di tutti i genitori... e una collega stamattina le ha
+        detto che probabilmente le "ruberà" l'idea! <br><br>
       </p>
 
 
