--- a/index.html
+++ b/index.html
@@ -328,60 +328,60 @@
             <td> <b> Accesso </b> </td>
             <td>Login</td>
             <td>Accesso alla homepage </td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td> <b>Registrazione</b> </td>
             <td> Registrazione - passo 1 (*) </td>
             <td> Inserimento dei propri dati social: caricamento immagine personale, email, password </td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td> </td>
             <td> Registrazione - passo 2 (*) </td>
             <td> Inserimento dei propri dati anagrafici: nome, cognome, sesso, città </td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <td>  </td>
           <td> Registrazione - passo 3 </td>
           <td> Inserimento dei propri dati scuola: nome figlio, cognome figlio, scuola, classe, con possibilità di aggiungere più figli </td>
-          <td> .... </td>
+          <td> SI con aggiunta figlio se c'è tempo </td>
           </tr>
           <tr>
             <td> <b>Homepage</b> </td>
             <td> Lista Insegnanti - Contatta (*) </td>
             <td> Lista di insegnanti dalla quale sarà possibile accedere ai profili degli Insegnanti (con la possibilità dunque di contattarli tramite chat "asincrona") </td>
-            <td> .... </td>
+            <td> SI lista, NO contatta </td>
           </tr>
           <tr>
             <td> </td>
             <td> Lista Genitori - Contatta (*) </td>
             <td> Lista di genitori ai quali viene associato il nome del proprio figlio, con possibilità di contattarli tramite chat "asincrona"  </td>
-            <td> .... </td>
+            <td> SI lista, NO contatta </td>
           </tr>
           <tr>
             <td>  </td>
             <td> Visualizzazione dei post pubblicati dagli insegnanti (*) </td>
             <td> Il genitore potrà visualizzare giorno dopo giorno i post che verranno pubblicati dai vari insegnanti </td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td>  </td>
             <td> Calendario (*) </td>
             <td> Visualizzazione data odierna con possibilità di aprire il calendario e selezionare una data diversa (per risalire a post datati) </td>
-            <td> .... </td>
+            <td> SI data odierna, NO post datati </td>
           </tr>
           <tr>
             <td>  </td>
             <td> Eventi (*) </td>
             <td> Tramite questo pulsante, l'utente ha accesso all'area dedicata agli eventi</td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td>  </td>
             <td> Promemoria - notifica eventi (*) </td>
             <td> In questa sezione l'utente visualizza tutti gli eventi del giorno (sia quelli a cui partecipa, sia quelli a cui non partecipa)</td>
-            <td> .... </td>
+            <td> NO </td>
           </tr>
 
           <tr>
@@ -390,78 +390,78 @@
             <td> Nel calendario saranno evidenziati con colori diversi i giorni nei quali è programmato un evento (3 colori diversi per 3 tipologie di eventi diversi)
               Schiacciando su un determinato giorno, si visualizza l'evento relativo a tale giorno, con descrizione annessa. Di default, viene visualizzato l'evento relativo alla data odierna
             </td>
-            <td> ... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td> </td>
             <td> Partecipa all'evento (*) </td>
             <td> Agli eventi ai quali si è stati invitati, sotto la descrizione dell'evento, è associato il tasto Partecipa (si aggiornerà in tal modo la sezione "eventi a cui si parteciperà" nella pagina personale dell'utente) </td>
-            <td> ... </td>
+            <td> NO </td>
           </tr>
 
           <tr>
             <td> </td>
             <td> Crea evento (*) </td>
             <td> L'utente ha la possibilità di creare un evento, e di specificarlo al passo successivo </td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td> </td>
             <td> Crea evento "Scuola" (*) </td>
             <td> Il genitore può organizzare eventi relativi alla scuola (mercatini di Natale, gite scolastiche, recite ecc ecc ), scegliendo di poterli
               condividere con gli insegnanti o i genitori</td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td> </td>
             <td> Crea evento "Casa" </td>
             <td> Il genitore può organizzare gruppi di studio a casa propria, fornendo il proprio supporto ai bambini in una determinata materia</td>
-            <td> ... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td> </td>
             <td> Crea evento "Extra" </td>
             <td> Il genitore può organizzare eventi esterni alla scuola (partite a calcetto, incontri tra genitori/insegnanti, ecc ecc), scegliendo di poterli
               condividere con gli insegnanti o i genitori  </td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td> </td>
             <td> Condividi evento con  - notifica invito evento (*) </td>
             <td> L'utente può, prima di finalizzare la creazione di un evento, scegliere di condividerlo con solo gli insegnanti, solo i genitori, o entrambi. In base a tale scelta,
               verrà inviata la notifica al relativo tipo di utente (nella sezione news eventi della pagina personale) </td>
-            <td> .... </td>
+            <td> NO </td>
           </tr>
           <tr>
             <td> <b>Profilo Personale </b> </td>
             <td> Visualizzazione informazioni personali (*) </td>
             <td> Verranno visualizzate alcune delle informazioni che l'utente ha inserito nella fase di registrazione </td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td> </td>
             <td> Notifiche Eventi (*) </td>
             <td> L'utente visualizza gli eventi sia a cui è stato invitato (sezione "eventi a cui sono stato invitato"), sia gli
               eventi a cui ha deciso di partecipare (sezione "eventi a cui parteciperò") </td>
-            <td> .... </td>
+            <td> NO </td>
           </tr>
           <tr>
             <td> </td>
             <td> Chiedi aiuto ad un esperto </td>
             <td> Il genitore potrà chiedere l'aiuto di un esperto (psicologo, sessuologo...) qualora lo ritenesse necessario per il proprio figlio </td>
-            <td> .... </td>
+            <td> NO </td>
           </tr>
           <tr>
             <td> </td>
             <td> Spazio genitori </td>
             <td> Tramite il pulsante "spazio genitori", il genitore potrà accedere allo spazio di condivisione file a cui hanno accesso solo i genitori </td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td> </td>
             <td> Area spazio genitori </td>
             <td> In questa area, i genitori potranno condividere tra loro documenti e immagini vari </td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
 
           </tbody>
@@ -484,7 +484,7 @@
             <td> <b> Accesso </b> </td>
             <td> Login </td>
             <td> Accesso alla homepage </td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td> <b>Registrazione</b> </td>
@@ -503,7 +503,7 @@
             <td> </td>
             <td> Registrazione - passo 3 </td>
             <td> Inserimento dei propri dati scuola: scuola, classe, materie, con possibilità di aggiungere più classi/materie </td>
-            <td> .... </td>
+            <td> ... </td>
           </tr>
           <tr>
           <tr>
@@ -528,7 +528,7 @@
             <td>  </td>
             <td> Scrittura dei post </td>
             <td> L'insegnante aggiorna il diario giornalmente pubblicando dei post realitivi a ciò che è stato fatto in aula </td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td>  </td>
@@ -602,30 +602,30 @@
             <td> </td>
             <td> Materiale didattico - visualizza </td>
             <td> Gli insegnanti e i genitori potranno visualizzare il materiale didattico caricato dal docente </td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <td> </td>
           <td> Materiale didattico - carica materiale </td>
           <td> L'insegnante avrà la possibilità di caricare del materiale didattico extra nella sezione "materiale didattico" </td>
-          <td> .... </td>
+          <td> SI </td>
           </tr>
           <tr>
             <td> </td>
             <td> Materiale didattico - carica immagine </td>
             <td> L'insegnante potrà condividere immagini o foto </td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td> </td>
             <td> Materiale didattico - carica documento </td>
             <td> L'insegnante potrà condividere documenti utili ai fini didattici (svolgimento di determinati esercizi, ...) </td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
           <tr>
             <td>  </td>
             <td> Materiale didattico - carica video </td>
             <td> L'insegnante potrà condividere video (per far capire il metodo di spiegazione utilizzato in aula, per approfondire determinati argomenti trattati a lezione, ...) </td>
-            <td> .... </td>
+            <td> SI </td>
           </tr>
 
           </tbody>
